--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,8 @@
-
-
-
-lll Default Layout lll
+<html>
+    <head>
+        <title>{{ site.title }}</title>
+    </head>
+    <body>
+        {{ content }}
+    </body>
+</html>
