--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,11 @@
   {% include head.html %}
 
   <body>
+    <p>sidebar start</p>
 
     {% include sidebar.html %}
+
+    <p>sidebar end</p>
 
     <div class="content container">
       {{ content }}
