--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.url }}">
+        <a href="{{ site.url }}/{{ site.baseurl }}">
           {{ site.title }}
         </a>
       </h1>
