--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,11 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      {% comment %}
       <a href="{{ site.url }}/{{ site.baseurl }}">
         {{ site.title }}
       </a>
+      {% endcomment %}
       <p class="lead">{{ site.description }}</p>
     </div>
 
