--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,6 +34,6 @@
 {% endcomment %}
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved. 무슨 copyright그냥 쓰세요.</p>
+    <p>&copy; {{ site.time | date: '%Y%M' }}. All rights reserved. 무슨 copyright그냥 쓰세요.</p>
   </div>
 </div>
