--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
 {% endcomment %}
     </nav>
 
-    <p class="lead">{{ site.description }}
+    <p class="lead">
       {{ site.author.name }}
     </p>
     <p>&copy; {{ site.time }}. All rights reserved.</p>
