--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,13 +22,22 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+
+      {% assign pages_list = site.pages %}
+      {% for node in pages_list %}
+        {% if node.title != null %}
+          {% if node.layout == "mama" %}
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
 {% comment %}
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
 {% endcomment %}
     </nav>
-
+    https://repo.garamx.com/docs/javascript/
     <p class="lead">
       {{ site.author.name }}
     </p>
