--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,14 +2,14 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <a href="{{ site.url }}/{{ site.baseurl }}">
-        {{ site.title }}
+        {{ site.title }}'s Home
       </a>
     </div>
-
+<div><hr/></div>
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
-
+      
       {% comment %}
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
         The code below dynamically generates a sidebar nav of pages with
         `layout: page` in the front-matter. See readme for usage.
       {% endcomment %}
@@ -23,21 +23,12 @@
         {% endif %}
       {% endfor %}
 
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "mama" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
 {% comment %}
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      {% endcomment %}
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-{% endcomment %}
     </nav>
-    https://repo.garamx.com/docs/javascript/
     <p class="lead">
       {{ site.author.name }}
     </p>
